Fixed text-align of blog post tile titles

--- a/css/styles.css
+++ b/css/styles.css
@@ -596,6 +596,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     margin-bottom: -15px;
     padding: 1rem;
 }
